--- a/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
+++ b/example/transform/huggingface_model_gemma_QA.ipynb.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
     "\n",
-    "Next, you will need a valid Huggingface Token to access the Gemma model. Once you have the token, set it as the environment variable `HF_token` within a `.env` file in the root directory of this repository.\n",
+    "Next, you will need a valid Huggingface Token to access the Gemma model. Once you have the token, set it as the environment variable `HF_TOKEN` within a `.env` file in the root directory of this repository. Check [this](https://huggingface.co/docs/huggingface_hub/en/package_reference/environment_variables) for more details.\n",
     "\n",
     "### Update system path"
    ]
@@ -217,8 +217,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "tokenizer_config.json: 100%|██████████| 2.16k/2.16k [00:00<00:00, 15.6MB/s]\n",
+      "tokenizer.model: 100%|██████████| 4.24M/4.24M [00:00<00:00, 73.3MB/s]\n",
+      "tokenizer.json: 100%|██████████| 17.5M/17.5M [00:00<00:00, 219MB/s]\n",
+      "special_tokens_map.json: 100%|██████████| 888/888 [00:00<00:00, 6.63MB/s]\n",
+      "config.json: 100%|██████████| 694/694 [00:00<00:00, 5.47MB/s]\n",
       "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n",
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.32s/it]\n"
+      "model.safetensors.index.json: 100%|██████████| 20.9k/20.9k [00:00<00:00, 109MB/s]\n",
+      "model-00001-of-00004.safetensors: 100%|██████████| 5.00G/5.00G [00:21<00:00, 233MB/s]\n",
+      "model-00002-of-00004.safetensors: 100%|██████████| 4.98G/4.98G [00:28<00:00, 174MB/s]\n",
+      "model-00003-of-00004.safetensors: 100%|██████████| 4.98G/4.98G [00:31<00:00, 159MB/s]\n",
+      "model-00004-of-00004.safetensors: 100%|██████████| 2.11G/2.11G [00:15<00:00, 133MB/s]\n",
+      "Downloading shards: 100%|██████████| 4/4 [01:38<00:00, 24.51s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:05<00:00,  1.29s/it]\n",
+      "generation_config.json: 100%|██████████| 137/137 [00:00<00:00, 987kB/s]\n"
      ]
     }
    ],
@@ -249,14 +261,8 @@
      "output_type": "stream",
      "text": [
       "  0%|          | 0/1 [00:00<?, ?it/s]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:492: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:25<00:00, 25.22s/it]\n"
+      "  warnings.warn(\n",
+      "100%|██████████| 1/1 [00:27<00:00, 27.30s/it]\n"
      ]
     }
    ],
